--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,34 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  justify-content: center;
-  align-items: center;
+  margin-left: 10px;
   font-family: "Roboto";
 }
 
 .title {
+  padding-top: 20px;
+  font-weight: 700;
   text-align: center;
+}
+
+.titleH5 {
+  padding-top: 10px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.titleH5WithoutPadding {
+  font-weight: 700;
+  text-align: center;
+}
+
+.loader {
+  margin-top: 50px;
+  text-align: center;
+}
+
+.loader-hide {
+  margin-top: 0px;
 }
 
 .footercontainer {
@@ -34,6 +55,7 @@ a:active {
 }
 
 .tweetbutton {
+  margin-top: 10px;
   padding: 5px 10px;
   background-color: #1d9bf0;
   color: white;
@@ -52,7 +74,7 @@ ul {
   padding-left: 0;
 }
 
-li {
+li.rule-item-cross {
   padding-left: 1em;
   text-indent: -1em;
 }
